Added Zoho Integration

--- a/app/livechat/client/views/sideNav/livechatFlex.html
+++ b/app/livechat/client/views/sideNav/livechatFlex.html
@@ -21,6 +21,7 @@
 				{{> sidebarItem menuItem "Appearance" false "livechat-appearance" }}
 				{{> sidebarItem menuItem "Webhooks" false "livechat-webhooks" }}
 				{{> sidebarItem menuItem "Facebook Messenger" false "livechat-facebook" }}
+				<!-- {{> sidebarItem menuItem "Zoho Desk" false "livechat-ticket-zoho-desk" }} -->
 				{{> sidebarItem menuItem "Office_Hours" false "livechat-officeHours" }}
 			</ul>
 		</div>
