--- a/app/livechat/client/stylesheets/livechat.less
+++ b/app/livechat/client/stylesheets/livechat.less
@@ -889,6 +889,28 @@
 	}
 }
 
+.lc-ticket {
+	border: 1px solid lightgray;
+    padding: 10px;
+    border-radius: 8px;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+	transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+	margin: 10px;
+
+	&:hover {
+		box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 8px 8px rgba(0,0,0,0.22);
+		cursor: pointer;
+	}
+}
+
+.lc-ticket-unclickable {
+	border: 1px solid lightgray;
+    padding: 10px;
+    border-radius: 8px;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+	margin: 10px;
+}
+
 @media screen and (max-width: 800px) {
 	.lc-analytics-ov-case {
 		& > .title {
