--- a/app/theme/client/main.css
+++ b/app/theme/client/main.css
@@ -49,6 +49,7 @@
 @import 'imports/components/emojiPicker.css';
 @import 'imports/components/table.css';
 @import 'imports/components/tabs.css';
+@import 'imports/components/md-chip.css';
 
 /* Modal */
 @import 'imports/components/modal/full-modal.css';
